# routes/api.php
@@ -26,7 +26,8 @@ Route::prefix('orders')->group(function () {
     Route::get('/', [\App\Http\Controllers\Backend\OrderController::class, 'index'])->name('orders.index');
     Route::get('/{id}', [\App\Http\Controllers\Backend\OrderController::class, 'show'])->name('orders.show');
     Route::post('/', [\App\Http\Controllers\Backend\OrderController::class, 'setOrderWithOrderItem'])->name('orders.post');
-    Route::patch('/{id}', [\App\Http\Controllers\Backend\OrderController::class, 'patch'])->name('orders.patch');
+    Route::patch('/{id}', [\App\Http\Controllers\Backend\OrderController::class, 'patch'])->name('orders.patch.by.order_id');
+    Route::patch('/payments/{payment_id}', [\App\Http\Controllers\Backend\OrderController::class, 'patchByPaymentId'])->name('orders.patch.by.payment_id');
 });
 
 // Sliders
