# storage/api-docs/api-docs.json
@@ -500,6 +500,45 @@
                 }
             }
         },
+        "/api/orders/{paymentId}": {
+            "patch": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "patch order status by paymentId",
+                "description": "patch order status by paymentId",
+                "operationId": "patchOrderStatusBypaymentId",
+                "parameters": [
+                    {
+                        "name": "paymentId",
+                        "in": "path",
+                        "description": "paymentId",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "description": "set order by microservice without cart",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/OrderWithOrderItemRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/api/products": {
             "get": {
                 "tags": [
